--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -14,7 +14,7 @@
 <!--grids-->
   <view class="weui-grids">
     <block wx:for="{{grids}}" wx:key="name">
-      <navigator url="{{item.url}}" class="weui-grid" hover-class="weui-grid_active">
+      <navigator url="../{{item.url}}/{{item.url}}" class="weui-grid" hover-class="weui-grid_active">
         <view>
           <image class="weui-grid__icon" src='{{item.icon}}' mode="scaleToFill"></image>
         </view> 
