--- a/pages/photographer/details/photographer.wxss
+++ b/pages/photographer/details/photographer.wxss
@@ -76,7 +76,7 @@
     margin-top: 10rpx;
     flex-wrap: wrap;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-around; 
 }
 
 .pd-work-item {
@@ -107,14 +107,27 @@
     color: #666;
 }
 
-.weui-flex{-webkit-box-align:center;-webkit-align-items:center;align-items:center}
-.weui-cells{margin-top:0;opacity:0;-webkit-transform:translateY(-50%);transform:translateY(-50%);-webkit-transition:.3s;transition:.3s}.weui-cells:after,.weui-cells:before{display:none}
-.weui-cells_show{opacity:1;-webkit-transform:translateY(0);transform:translateY(0)}
-.weui-cell:before{right:15px}
-.kind-list__item{margin:10px 0;background-color:#fff;border-radius:2px;overflow:hidden}
-.kind-list__item:first-child{margin-top:0}
-.kind-list__img{width:30px;height:30px}
-.kind-list__item-hd{padding:20px;-webkit-transition:opacity .3s;transition:opacity .3s}
-.kind-list__item-hd_show{opacity:.4}
-.kind-list__item-bd{height:0;overflow:hidden}
-.kind-list__item-bd_show{height:auto}
+.WxMasonryTitle {
+    padding-left: 20rpx;
+    margin-top: 20rpx;
+    margin-bottom: 20rpx;
+    font-size: 32rpx;
+    font-weight: bold;
+    color: #444;
+    border-left: 10rpx solid #47a86c;
+}
+.WxMasonryImage{
+  width: 100% !important;
+  display: inline-block;
+}
+
+
+.WxMasonryView{
+  column-count:2;
+  column-gap: 2px;
+  width: 100%;
+  justify-content: space-around;
+  box-sizing: border-box;
+  padding: 10rpx;
+  margin-top: 10rpx;
+}
